[project]
name = "djhtmx"
version = "0.0.0"
description = "Brings LiveView from Phoenix framework into Django"
authors = [
    { name = "Eddy Ernesto del Valle Pino", email = "eddy@edelvalle.me" }
]

readme="README.md"
license="MIT"
requires-python = ">=3.10"

classifiers=[
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Internet :: WWW/HTTP',
]

dependencies = [
   "django>=4.1",
   "pydantic>=2,<3",
]

[project.urls]
Repository="https://github.com/edelvalle/djhtmx"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/djhtmx"]

[tool.rye]
managed = true
dev-dependencies = [
    "django-stubs~=4.2.7",
    "django-stubs-ext~=4.2.7",
    "djlint~=1.34.1",
    "ipython~=8.22.1",
    "pyright==1.1.351",
    "ruff==0.4.2",
    "whitenoise~=6.6.0",
    "isort~=5.13.2",
    "ipdb~=0.13.13",
    "django-extensions~=3.2.3",
]


[tool.ruff]
line-length = 80
target-version = "py311"

[too.isort]
line-length = 80
profile ="django"


[tool.pyright]
strictParameterNoneValue = false
reportMatchNotExhaustive = "error"
exclude = [
  "**/static",
  "**/migrations",
  "**/__pycache__",
]

[tool.isort]
profile = "black"
line_length = 80

[tool.djlint]
# Here we ignore
# H006: Img tag should have height and width attributes
# H012: There should be no spaces around attribute =. (alpine js bindings)
# H021: Inline styles.
# H025: Tag seems to be an orphan. Cause djlint does not understand all the templatetags we use like {% class {} %}
# H031: Metadata in html tag.
ignore = "H021,H006,H025,H031,H012"
indent = 2
profile="django"
blank_line_after_tag="load,extends,endblock"
close_void_tags=true
