[project]
name = "djhtmx"
version = "0.0.0"
description = "Brings LiveView from Phoenix framework into Django"
authors = [
    { name = "Eddy Ernesto del Valle Pino", email = "eddy@edelvalle.me" }
]

readme="README.md"
license="MIT"
requires-python = ">= 3.11"

classifiers=[
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Internet :: WWW/HTTP',
]

dependencies = [
   "django>=4.1",
   "pydantic>=2,<3",
   "django-click>=2.3.0,<3",
   "click>=8.1.3, <8.2",
   "xotl.tools>=3.1.1",
   "orjson>=3.10.7",
   "channels>=4.1.0",
   "uuid6>=2024.7.10",
]


[tool.uv]
dev-dependencies = [
    "pywatchman>=2.0.0",
    "django-stubs~=5.0.4",
    "django-stubs-ext~=5.0.4",
    "djlint~=1.34.1",
    "ipython~=8.26.0",
    "basedpyright==1.17",
    "ruff==0.6.1",
    "whitenoise~=6.7.0",
    "isort~=5.13.2",
    "ipdb~=0.13.13",
    "django-extensions~=3.2.3",
    "uvicorn[standard]>=0.30.6",
]


[project.urls]
Repository="https://github.com/edelvalle/djhtmx"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/djhtmx"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
preview = true
exclude = ["migrations"]

[tool.isort]
line_length = 100
profile ="django"
src_paths = ["src"]
skip_glob = ["src/**/migrations/*", "src/**/__init__.py"]
skip_gitignore = true


[tool.basedpyright]
typeCheckingMode="standard"
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
strictParameterNoneValue = false
reportMatchNotExhaustive = "error"
exclude = [
  "**/static",
  "**/migrations",
  "**/__pycache__",
]

[tool.djlint]
# Here we ignore
# H006: Img tag should have height and width attributes
# H012: There should be no spaces around attribute =. (alpine js bindings)
# H021: Inline styles.
# H025: Tag seems to be an orphan. Cause djlint does not understand all the templatetags we use like {% class {} %}
# H031: Metadata in html tag.
ignore = "H021,H006,H025,H031,H012"
indent = 2
profile="django"
blank_line_after_tag="load,extends,endblock"
close_void_tags=true
