[metadata]
name = djhtmx
version = 0.1.0
description = Brings LiveView from Phoenix framework into Django
long_description = file: README.rst
classifiers =
   Development Status :: 4 - Beta
   Environment :: Web Environment
   Framework :: Django
   Framework :: Django
   Intended Audience :: Developers
   License :: OSI Approved :: MIT License
   Operating System :: OS Independent
   Programming Language :: Python
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Topic :: Internet :: WWW/HTTP


author = Eddy Ernesto del Valle Pino
author_email = eddy@edelvalle.me
license = MIT
url = https://github.com/edelvalle/djhtmx

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    pydantic>=1.8,<2
	django


[flake8]
ignore =
   E501
   B901 # black will ensure the max line length

   E722  # bare 'except:' also checked by bugbear
   B011  # 'assert False' is fine.

   E203  # black puts spaces before ':'

   W503
   W504

select = C,E,F,W,B
max-line-length = 80
show-soure = true
